--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,74 @@
 body {
-	background: url(../images/dressup.jpg) no-repeat center center fixed;
+	background: url(../images/jimjeff.jpg) no-repeat center center fixed;
 	background-size: cover;
 	font-weight: bold;
 	color:black;
+}
+h1 {
+	text-align: center;
+	color:#e6c300;
+}
+.iscorrect{
+	font-size:25px;
+	color: #00134d;
+	padding:20px;
+}	
+.startbtn{
+	font-size:25px;
+	text-align: center;
+	color: #e6c300;
+	background-color: #00134d; 
+	width :200px;
+	padding:20px;
+	position:relative;
+	top: 150px;
+    left: 260px;
+}
+.fulltimer{
+	color:#00134d;
+}
+.container {
+	background-color: #e6c300;
+	margin-top: 200px;
+	height:389px;
+	border:2px solid #00134d;
+}
+.row{
+	text-align: center;
+}
+.main{
+	position:fixed;
+	top:50%;
+	margin: 0 10% 0 10%;
+}	
+.question{
+	color:#e6c300;
+	background-color: #00134d;
+	padding:10px;
+	margin:10px  10px 50%;	
+}
+.gif{
+	height:200px;
+	width:250px;
+}
+.answerbtn{
+	color:#e6c300;
+	background-color: #00134d;
+	padding:10px;
+	width:82.5%;
+	margin:10px 50px;
+	font-weight: bold
+}
+.restartbtn{
+	font-size:25px;
+	text-align: center;
+	color: #e6c300;
+	background-color: #00134d; 
+	width :200px;
+	padding:20px;
+}
+.para{
+	color:#00134d;
+	font-size:20px;
+	padding:10px;
+}
